--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -119,10 +119,42 @@ services:
       timeout: 10s
       retries: 120
 
+  logstash:
+    depends_on:
+      es01:
+        condition: service_healthy
+      kibana:
+        condition: service_healthy
+    # image: docker.elastic.co/logstash/logstash:${STACK_VERSION}
+    build:
+      dockerfile: ./logstash/logstash.dockerfile
+    labels:
+      co.elastic.logs/module: logstash
+    user: root
+    volumes:
+      - logstashdata:/usr/share/logstash/data
+      - certs:/usr/share/logstash/certs
+      # - ./logstash.conf:/usr/share/logstash/pipeline/logstash.conf:ro
+      - ./logstash/pipeline/:/usr/share/logstash/pipeline/
+      - ./logstash/config/:/usr/share/logstash/config/
+    environment:
+      - NODE_NAME="logstash"
+      - xpack.monitoring.enabled=false
+      - ELASTIC_USER=elastic
+      - ELASTIC_PASSWORD=${ELASTIC_PASSWORD}
+      - ELASTIC_HOSTS=https://es01:9200
+    # command: bash -c "logstash -f /etc/logstash/conf.d/logstash.conf "
+    # command: logstash -f /usr/share/logstash/pipeline/logstash.conf
+    ports:
+      - "5044:5044/udp"
+    # mem_limit: ${MEM_LIMIT}
+
 volumes:
   certs:
     driver: local
   esdata01:
     driver: local
   kibanadata:
+    driver: local
+  logstashdata:
     driver: local
