Fix mongodb input

--- a/logstash/pipeline/mongodb.conf
+++ b/logstash/pipeline/mongodb.conf
@@ -1,11 +1,8 @@
 input {
   mongodb {
     uri => "mongodb://mongodb://admin:password@host.docker.internal:27017/suumo?authSource=admin:27017"
-    placeholder_db_dir => "/path/to/placeholder_db"
-    placeholder_db_name => "logstash_sqlite.db"
     collection => "suumo"
-    batch_size => 5000
-    threads => 2
+    placeholder_db_dir => "/opt/logstash-mongodb/"
   }
 }
 
