Fix logstash connect error

--- a/logstash/pipeline/mongodb.conf
+++ b/logstash/pipeline/mongodb.conf
@@ -12,9 +12,11 @@ filter {
 
 output {
   elasticsearch {
-    hosts => ["es01:9200"]
-    index => "logs-%{+YYYY.MM.dd}"
-    ssl => true
-    ssl_certificate_verification => false
+    index => "suumo-%{+YYYY.MM.dd}"
+    hosts => ["https://es01:9200"]
+    user => "elastic"
+    password => "password"
+    ssl_enabled => true
+    cacert => "/usr/share/logstash/certs/ca/ca.crt"
   }
 }
