Make the network consistent

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -158,3 +158,8 @@ volumes:
     driver: local
   logstashdata:
     driver: local
+
+networks:
+  default:
+    external:
+      name: realestate_default
