--- a/logstash/pipeline/mongodb.conf
+++ b/logstash/pipeline/mongodb.conf
@@ -1,8 +1,8 @@
 input {
   mongodb {
-    uri => "mongodb://mongodb://admin:password@host.docker.internal:27017/suumo?authSource=admin:27017"
+    uri => "mongodb://admin:password@mongodb:27017/?authSource=admin"
     collection => "suumo"
-    placeholder_db_dir => "/opt/logstash-mongodb/"
+    placeholder_db_dir => "/usr/share/logstash/data/"
   }
 }
 
