Fix loading issue for mongodb

--- a/logstash/pipeline/mongodb.conf
+++ b/logstash/pipeline/mongodb.conf
@@ -1,18 +1,23 @@
 input {
   mongodb {
-    uri => "mongodb://admin:password@mongodb:27017/?authSource=admin"
+    uri => "mongodb://admin:password@mongodb:27017/suumo?authSource=admin"
     collection => "suumo"
     placeholder_db_dir => "/usr/share/logstash/data/"
+    batch_size => 5000
   }
 }
 
 filter {
-  # Add your desired filters here
+  mutate {
+    copy => { "_id" => "[@metadata][_id]"}
+    remove_field => ["_id"]
+  }
 }
 
 output {
   elasticsearch {
     index => "suumo-%{+YYYY.MM.dd}"
+    document_id => "%{[@metadata][_id]}"
     hosts => ["https://es01:9200"]
     user => "elastic"
     password => "password"
