Add restart policy

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,6 +3,7 @@ version: "2.2"
 services:
   setup:
     image: docker.elastic.co/elasticsearch/elasticsearch:${STACK_VERSION}
+    restart: always
     volumes:
       - certs:/usr/share/elasticsearch/config/certs
     user: "0"
@@ -55,6 +56,7 @@ services:
       setup:
         condition: service_healthy
     image: docker.elastic.co/elasticsearch/elasticsearch:${STACK_VERSION}
+    restart: always
     volumes:
       - certs:/usr/share/elasticsearch/config/certs
       - esdata01:/usr/share/elasticsearch/data
@@ -97,6 +99,7 @@ services:
       es01:
         condition: service_healthy
     image: docker.elastic.co/kibana/kibana:${STACK_VERSION}
+    restart: always
     volumes:
       - certs:/usr/share/kibana/config/certs
       - kibanadata:/usr/share/kibana/data
@@ -128,6 +131,7 @@ services:
     # image: docker.elastic.co/logstash/logstash:${STACK_VERSION}
     build:
       dockerfile: ./logstash/Dockerfile
+    restart: always
     labels:
       co.elastic.logs/module: logstash
     user: root
